# codingame

./: .gitignore  .pre-commit-config.yaml  .stylish-haskell.yaml  Makefile
ai/game-of-drones/: Main.hs  README.rst
code-golf/: Temperatures.hs
community/: Anagrams.hs  Candies.hs  ChessCavalry.hs  ConnectFour.hs  DanceDance.hs  GreatestNumber.hs  JackSilverCasinoPart1.hs  KGood.hs  SimpleFractionToMixedNumber.hs  SnakeEncode.hs  SpreadsheetLabels.hs
community/divine/: README.rst  divine.cabal
community/divine/src/: Main.hs
community/game-of-life/: game-of-life.cabal
community/game-of-life/src/: Main.hs
community/haunted-manor/: README.rst  haunted-manor.cabal
community/haunted-manor/src/: Main.hs
community/mini-sudoku-solver/: LICENSE  mini-sudoku-solver.cabal
community/mini-sudoku-solver/src/: Main.hs
community/text-alignment/: Main.hs  README.rst  stack.yaml  text-alignment.cabal
community/text-alignment/tests/: 01-in.txt  01-out.txt  02-in.txt  02-out.txt  03-in.txt  04-in.txt  04-out.txt
community/text_alignment/: stack.yaml
community/text_alignment/tests/: 03-out.txt
community/triforce/: Triforce.hs
community/turing-machine/: Main.hs  README.rst
contests/codebusters/: .gitignore  Main.hs  README.rst  codebusters.cabal  stack.yaml
contests/coders-strike-back/: Main.hs
contests/codevszombies/: main.py
contests/the-accountant/: Main.hs  README.rst  stack.yaml  the-accountant.cabal
contests/ultimate-tictactoe/: LICENSE  Main.hs  README.rst  package.yaml
hard/bender_money_machine/: Main.hs  Makefile
hard/skynet_strikes_back/: main.py
medium/bender_depressed_robot/: BenderDepressedRobot.hs
winamax_sponsored_challenge/: main.py
