name:                mini-sudoku-solver
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/bwbaugh/mini-sudoku-solver#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Wesley Baugh
maintainer:          wesley@bwbaugh.com
copyright:           (c) 2016 Wesley Baugh
category:            Console
build-type:          Simple
cabal-version:       >=1.10

executable mini-sudoku-solver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
