name:                text-alignment
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Wesley Baugh
maintainer:          wesley@bwbaugh.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.rst
cabal-version:       >=1.10

executable text-alignment
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
