name:                the-accountant
version:             0.1.0
synopsis:            The Accountant contest from CodinGame.
description:         See README.
license:             AllRightsReserved
license-file:        LICENSE
author:              Wesley Baugh
maintainer:          bwbaugh@gmail.com
copyright:           2016 Wesley Baugh
category:            Game
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable the-accountant
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
